fix css width issue on smaller devices

--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,5 +1,7 @@
 .about {
 	margin-bottom: 6rem;
+	max-width: 100%;
+	overflow: hidden;
 
 	&__section {
 		margin-bottom: 3rem;
