--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -1,5 +1,7 @@
 .content {
 	margin-bottom: 6rem;
+	max-width: 100%;
+	overflow: hidden;
 
 	&__section {
 		margin-bottom: 3rem;
