--- a/sass/layout/_course.scss
+++ b/sass/layout/_course.scss
@@ -1,6 +1,7 @@
 .course {
 	margin-bottom: 6rem;
 	max-width: 100%;
+	overflow: hidden;
 
 	&__section {
 		margin-bottom: 3rem;
