--- a/sass/layout/_introduction.scss
+++ b/sass/layout/_introduction.scss
@@ -1,6 +1,8 @@
 .introduction {
 	margin: 6rem 0 6rem 0;
 	padding: 0 1rem;
+	max-width: 100%;
+	overflow: hidden;
 
 	&__divider {
 		max-width: 15rem;
