--- a/sass/layout/_offer.scss
+++ b/sass/layout/_offer.scss
@@ -1,5 +1,7 @@
 .offer {
 	margin-bottom: 6rem;
+	max-width: 100%;
+	overflow: hidden;
 
 	&__section {
 		margin-bottom: 2rem;
